<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mSelectedHsv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/mConnectButton"
        app:layout_constraintStart_toStartOf="@+id/mSelectedHex" />

    <TextView
        android:id="@+id/mSelectedHex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:textColor="#FFFFFF"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/mRedIndicator"
        app:layout_constraintTop_toTopOf="@+id/mConnectButton" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/randomColorButton"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toStartOf="@+id/mTurnOn"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mTurnOn"
        fancy:fb_defaultColor="#FFFFFF"
        fancy:fb_radius="5dp"
        fancy:fb_text="@string/mRandomColorButtonText"
        fancy:fb_textColor="#000000"
        fancy:fb_textSize="15dp" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/mConnectButton"
        android:layout_width="92dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/color_picker_view"
        app:layout_constraintTop_toTopOf="parent"
        fancy:fb_defaultColor="#FFFFFF"
        fancy:fb_radius="5dp"
        fancy:fb_text="@string/mConnectButtonConnectText"
        fancy:fb_textColor="#000000"
        fancy:fb_textSize="15dp" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/mTurnOn"
        android:layout_width="124dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        fancy:fb_defaultColor="#FFFFFF"
        fancy:fb_radius="5dp"
        fancy:fb_text="@string/mTurnOnButtonOnText"
        fancy:fb_textColor="#000000"
        fancy:fb_textSize="15dp" />

    <com.flask.colorpicker.ColorPickerView
        android:id="@+id/color_picker_view"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        app:alphaSlider="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lightnessSlider="true"
        app:lightnessSliderView="@+id/v_lightness_slider"
        app:wheelType="CIRCLE" />


    <com.flask.colorpicker.slider.LightnessSlider
        android:id="@+id/v_lightness_slider"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_picker_view" />

    <TextView
        android:id="@+id/btStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        android:text="@string/mConnectionStatusWaitText"
        app:layout_constraintEnd_toEndOf="@+id/mConnectButton"
        app:layout_constraintTop_toBottomOf="@+id/mConnectButton" />

    <Switch
        android:id="@+id/mSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:checked="false"
        app:layout_constraintBottom_toBottomOf="@+id/randomColorButton"
        app:layout_constraintEnd_toStartOf="@+id/randomColorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/randomColorButton" />

    <TextView
        android:id="@+id/mRenderMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:text="@string/mRenderModeCircleRendererText"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="@+id/mSwitch"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="@+id/mSwitch"
        app:layout_constraintTop_toBottomOf="@+id/mSwitch" />

    <TextView
        android:id="@+id/mR"
        android:layout_width="wrap_content"
        android:layout_height="13dp"
        android:layout_marginEnd="8dp"
        android:text="255"
        android:textColor="@android:color/background_light"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/mRedIndicator"
        app:layout_constraintTop_toTopOf="@+id/mRedIndicator" />

    <TextView
        android:id="@+id/mG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="255"
        android:textColor="@android:color/background_light"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/mR"
        app:layout_constraintStart_toStartOf="@+id/mR"
        app:layout_constraintTop_toBottomOf="@+id/mR" />

    <TextView
        android:id="@+id/mB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="255"
        android:textColor="@android:color/background_light"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/mG"
        app:layout_constraintStart_toStartOf="@+id/mG"
        app:layout_constraintTop_toBottomOf="@+id/mG" />

    <com.white.progressview.HorizontalProgressView
        android:id="@+id/mRedIndicator"
        android:layout_width="150dp"
        android:layout_height="13dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:padding="10dp"
        android:progress="100"
        app:layout_constraintEnd_toEndOf="@+id/color_picker_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:progressReachColor="#FF0000"
        app:progressTextColor="#FF0000"
        app:progressTextVisible="true"
        app:progressTextPrefix=""
        app:progressNormalSize="4dp"
        app:progressReachSize="4dp"
        />


    <com.white.progressview.HorizontalProgressView
        android:id="@+id/mBlueIndicator"
        android:layout_width="150dp"
        android:layout_height="13dp"
        android:padding="10dp"
        android:progress="100"
        app:layout_constraintEnd_toEndOf="@+id/mGreenIndicator"
        app:layout_constraintStart_toStartOf="@+id/mGreenIndicator"
        app:layout_constraintTop_toBottomOf="@+id/mGreenIndicator"
        app:progressReachColor="#0000FF"
        app:progressTextColor="#0000FF"
        app:progressTextVisible="true"
        app:progressTextPrefix=""
        app:progressNormalSize="4dp"
        app:progressReachSize="4dp"
        />

    <com.white.progressview.HorizontalProgressView
        android:id="@+id/mGreenIndicator"
        android:layout_width="150dp"
        android:layout_height="13dp"
        android:padding="10dp"
        android:progress="100"
        app:layout_constraintEnd_toEndOf="@+id/mRedIndicator"
        app:layout_constraintStart_toStartOf="@+id/mRedIndicator"
        app:layout_constraintTop_toBottomOf="@+id/mRedIndicator"
        app:progressReachColor="#00FF00"
        app:progressTextColor="#00FF00"
        app:progressTextVisible="true"
        app:progressTextPrefix=""
        app:progressNormalSize="4dp"
        app:progressReachSize="4dp"
        />

    <com.xw.repo.BubbleSeekBar
        android:id="@+id/mDensityBar"
        android:layout_width="368dp"
        android:layout_height="10dp"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        app:bsb_always_show_bubble="false"
        app:bsb_bubble_color="#FFFFFF"
        app:bsb_bubble_text_color="#000000"
        app:bsb_max="25"
        app:bsb_min="2"
        app:bsb_progress="5"
        app:bsb_second_track_color="#FFFFFF"
        app:bsb_section_text_position="bottom_sides"
        app:bsb_show_progress_in_float="false"
        app:bsb_show_section_mark="false"
        app:bsb_show_section_text="false"
        app:bsb_show_thumb_text="true"
        app:bsb_thumb_radius_on_dragging="8dp"
        app:bsb_track_color="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_lightness_slider" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="35dp">

        <TextView
            android:id="@+id/activity_main_redtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <com.nhaarman.supertooltips.ToolTipRelativeLayout
            android:id="@+id/activity_main_tooltipRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.nhaarman.supertooltips.ToolTipRelativeLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>